Fix dark ambient overflow bug

--- a/sass/dark_ambient/style.scss
+++ b/sass/dark_ambient/style.scss
@@ -410,7 +410,7 @@ ul#userinfo_username {
 
 .username {
     text-overflow: ellipsis;
-    max-width: 70px;
+    max-width: 60px;
 }
 
 #alerts {
